Trying to put image in background

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,11 @@ html {
   text-align: center;
   font-family: Helvetica;
 }
+h1 {
+  font-size:70px;
+  font-weight: bold;
+  color: white;
+
+#titleimage {
+  background-image: url(resources/images/flatiron.png);
+}
