--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,11 @@
-html {
+body {
   text-align: center;
   font-family: Helvetica;
 }
 h1 {
   font-size:70px;
   font-weight: bold;
-  color: blue;
+  color: white;
 }
 h2 {
   font-size: 32px;
@@ -15,21 +15,23 @@ h4 {
   font-size: 23px;
   font-weight: bold;
 }
-h5 {
+li {
   font-size: 18px;
-  color: blue;
+  color: white;
+  list-style-type: none;
 }
 p {
   font-size: 14px;
 }
 .titleimage {
-  background-image: url(/resources/images/flatiron.png);
+  background-image: url(../images/flatiron.png);
 }
 h3.titleimage {
   font-size: 23px;
   font-weight: bold;
+  color: white;
 }
-h6 {
+footer {
   font-size: 11px;
   color:white;
   background-color:dimgray;
